hphp/test/zend7/Zend/tests/bug64720.php.expectf

Fatal error: %s
Stack trace:
#0 [internal function]: Stat->__destruct()
#1 {main}
  thrown in %sbug64720.php on line 12